--- a/ios/build.gradle
+++ b/ios/build.gradle
@@ -4,7 +4,7 @@ sourceCompatibility = '1.7'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 ext {
-	mainClassName = "com.n3rv.colors.IOSLauncher"
+	mainClassName = "com.rawr.colors.IOSLauncher"
 }
 
 // Extracts native libs (*.a) from the native-ios.jar and places them
